1.20.1-3.1.5
    - Updated to Crust 2.3.4.
    - Fixed a potential cause of world load deadlock.
    - The master disable for vanilla replacement now works.
    - Drowning creepers no longer create water in the Nether (closes #43).
1.20.1-3.1.4
    - Added Scope Creeper.
    - Added Slab Ghast.
    - Added Armored Blaze.
    - Fixed some ghast variants constantly using their shooting texture even when not attacking.
    - Fixed default fall damage multiplier for blazes.
    - Fixed mobs replaced by the Special Mobs mob replacer not spawning in with updated health.
    - Fixed Corporeal Shift Ghast ignoring invulnerability-bypass damage when in incorporeal form.
1.20.1-3.1.3
    - Fixed Piglins not being scared of zombified piglin variants.
    - Fixed Zombified Piglin variants not holding their hands out.
    - Fixed various overlay textures not using the correct model, appearing flat.
    - Fixed Special Mobs not always loading before Crust, sometimes resulting in a crash.
1.20.1-3.1.2
    - Now requires Crust (significant internal config changes, will affect your existing configs).
1.20.1-2.1.2-b
    - Ported to 1.20.1.
    - Jade compat for Ninja Skeletons.
    - Dropped The One Probe compat.
1.16.5-1.0.2
    - Fixed a crash related to checking if mobs can stick to certain blocks.
    - Fixed ranged attack damage stat for arrows being double what it should be.
1.16.5-1.0.1
    - Fixed certain vanilla advancements broken by mob replacement.
    - Cinders now spawn less smoke.
1.16.5-1.0.0
    - Rewritten and rebased version number for MC 1.16.5.
1.0.4
    - Maybe actually fixed the 'permanently respawning mob' bug.
1.0.3
    - Fixed issue preventing all attribute modifications during mob replacement. Fixes the superspeed ghasts.
    - Life loss and life steal effects can no longer reduce life below 1 (half a heart). Prevents inventory loss bug.
    - Witches of the Wilds now spawn 3 baby spiders with their summon spell by default instead of 0.