@@ -3,6 +3,8 @@
     - Fixed a potential cause of world load deadlock.
     - The master disable for vanilla replacement now works.
     - Drowning creepers no longer create water in the Nether (closes #43).
+    - Blaze mixin now fails softly (closes #44).
+    - Armored blazes no longer sound like a tin roof in the rain.
 1.20.1-3.1.4
     - Added Scope Creeper.
     - Added Slab Ghast.
